--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -23,7 +23,19 @@
   <div class="ui divider"></div>
   <div class="ui six doubling cards">
     <div class="card episode-card" *ngFor="let episode of bangumi.episodes">
-      <a class="image" [routerLink]="['Play', {episode_id: episode.id}]">
+      <div class="image" *ngIf="episode.status!==2">
+        <div class="image-wrapper">
+          <div class="image-fallback">
+            <h4 class="ui icon film icon-holder">
+              <i class="film icon"></i>
+            </h4>
+          </div>
+        </div>
+      </div>
+      <div *ngIf="episode.status!==2" class="content unfinished">
+        <span>第{{episode.episode_no}}话</span>
+      </div>
+      <a *ngIf="episode.status===2" class="image" [routerLink]="['Play', {episode_id: episode.id}]">
         <ui-image-placeholder [imageUrl]="episode.thumbnail">
           <div class="ui-image-fallback">
             <h4 class="ui icon film icon-holder">
@@ -32,7 +44,7 @@
           </div>
         </ui-image-placeholder>
       </a>
-      <a class="content" [routerLink]="['Play', {episode_id: episode.id}]">
+      <a *ngIf="episode.status===2" class="content" [routerLink]="['Play', {episode_id: episode.id}]">
         <span>第{{episode.episode_no}}话</span>
       </a>
     </div>
