--- a/src/app/home/bangumi-detail/bangumi-detail.less
+++ b/src/app/home/bangumi-detail/bangumi-detail.less
@@ -20,3 +20,33 @@
     padding: 0 2rem 3rem 2rem;
   }
 }
+
+.episode-card {
+
+  .image-wrapper {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+  }
+
+  .image-fallback{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #cfcfcf;
+    color: #868686;
+    .icon-holder {
+      font-size: 2rem;
+    }
+  }
+
+  .content.unfinished {
+    color: #a9a9a9;
+  }
+}
