--- a/src/ng2-semantic/image-placeholder/ui-image-placeholder.less
+++ b/src/ng2-semantic/image-placeholder/ui-image-placeholder.less
@@ -19,7 +19,8 @@ ui-image-placeholder {
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #999999;
+      background-color: #b0b0b0;
+      color: #5b5b5b;
     }
 
     &.loaded {
