--- a/src/app/home/player/player.less
+++ b/src/app/home/player/player.less
@@ -5,6 +5,7 @@
   height: 100%;
   //transition: width 0.3s linear, height 0.3s linear;
   background-color: #000;
+  outline: none;
 
   &.hide-cursor {
     cursor: none;
