--- a/src/app/admin/bangumi-detail/bangumi-detail.less
+++ b/src/app/admin/bangumi-detail/bangumi-detail.less
@@ -47,6 +47,30 @@
     .episode-thumbnail {
       width: 20rem;
       margin-right: 1.5em;
+      .no-image {
+        .image-wrapper {
+          position: relative;
+          width: 100%;
+          height: 11.25rem;
+        }
+
+        .image-fallback{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: #cfcfcf;
+          color: #868686;
+          .icon-holder {
+            font-size: 2rem;
+          }
+        }
+      }
+
       .thumbnail-image {
         width: 100%;
         height: 11.25rem;
