--- a/src/ng2-semantic/slider/slider.less
+++ b/src/ng2-semantic/slider/slider.less
@@ -1,35 +1,94 @@
 @slider-dragger-color: #d1d1d1;
+@slider-bar-thick: 5px;
+@slider-dragger-diameter: 11px;
+@slider-thick: (@slider-bar-thick + @slider-dragger-diameter + 3px);
 
 ui-slider {
   display: block;
-  width: 100%;
-  height: 11px;
   cursor: pointer;
+
   .slider-wrapper {
     display: block;
+    width: 100%;
+    height: 100%;
     .slider-bar {
-      height: 3px;
-      width: 100%;
       position: relative;
       background-color: #e8e8e8;
       .slider-bar-progress {
-        width: 0;
-        height: 100%;
         position: absolute;
-        top: 0;
-        left: 0;
         background-color: #bebebe;
       }
       .slider-bar-dragger {
-        width: 9px;
-        height: 9px;
         position: absolute;
-        transform: translateX(-50%);
-        top: -3px;
+        width: @slider-dragger-diameter;
+        height: @slider-dragger-diameter;
+        border-radius: (@slider-dragger-diameter / 2);
         background-color: @slider-dragger-color;
         box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
         &:hover {
           background-color: lighten(@slider-dragger-color, 5%);
+        }
+      }
+    }
+  }
+  &.horizontal {
+    width: 100%;
+    height: @slider-thick;
+    padding: 0 (@slider-dragger-diameter / 2);
+    .slider-wrapper {
+      .slider-bar {
+        top: ((@slider-thick - @slider-bar-thick) / 2);
+        height: @slider-bar-thick;
+        width: 100%;
+        .slider-bar-progress {
+          width: 0;
+          height: 100%;
+          top: 0;
+          left: 0;
+        }
+        .slider-bar-dragger {
+          transform: translateX(-50%);
+          top: -((@slider-dragger-diameter - @slider-bar-thick) / 2);
+        }
+        .ui.pointing {
+          display: none;
+          position: absolute;
+          bottom: ((@slider-dragger-diameter - @slider-bar-thick) / 2 + @slider-bar-thick - 2px);
+          transform: translateX(-50%);
+          &.show {
+            display: block;
+          }
+        }
+      }
+    }
+  }
+
+  &.vertical {
+    width: @slider-thick;
+    height: 100%;
+    .slider-wrapper {
+      .slider-bar {
+        left: ((@slider-thick - @slider-bar-thick) / 2);
+        width: @slider-bar-thick;
+        height: 100%;
+        .slider-bar-progress {
+          width: 100%;
+          height: 0;
+          bottom: 0;
+          left: 0;
+        }
+        .slider-bar-dragger {
+          transform: translateY(-50%);
+          bottom: ((@slider-dragger-diameter - @slider-bar-thick) / 2);
+        }
+        .ui.pointing {
+          display: none;
+          position: absolute;
+          right: ((@slider-dragger-diameter - @slider-bar-thick) / 2 + @slider-bar-thick - 2px);
+          transform: translateY(-50%);
+          &.show {
+            display: block;
+          }
         }
       }
     }
