update slider ,no binding progress is a ratio not percentage value.

--- a/src/app/home/default/default.html
+++ b/src/app/home/default/default.html
@@ -36,4 +36,9 @@
       </a>
     </div>
   </div>
+  <div class="test-area">
+    <div class="slider-container">
+      <ui-slider orientation="vertical"></ui-slider>
+    </div>
+  </div>
 </div>
