--- a/src/app/home/player/player-controls/player-controls.html
+++ b/src/app/home/player/player-controls/player-controls.html
@@ -16,4 +16,5 @@
     <ng-content select=".volume-button"></ng-content>
     <ng-content select=".fullscreen-button"></ng-content>
   </div>
+  <ng-content select="volume-control"></ng-content>
 </div>
