--- a/src/app/home/player/player-controls/player-controls.less
+++ b/src/app/home/player/player-controls/player-controls.less
@@ -83,4 +83,14 @@
       font-size: 1rem;
     }
   }
+
+  volume-control {
+    display: none;
+    position: absolute;
+    right: 3.5rem;
+    bottom: 4rem;
+    &.show {
+      display: block;
+    }
+  }
 }
