--- a/src/app/home/player/player.less
+++ b/src/app/home/player/player.less
@@ -1,4 +1,5 @@
 @import './player-controls/player-controls.less';
+@import './volumne-control/volume-control.less';
 
 .video-container {
   margin: 0;
