--- a/src/app/home/default/default.less
+++ b/src/app/home/default/default.less
@@ -1,3 +1,12 @@
 .default-container {
   padding-top: 2rem;
 }
+
+.test-area {
+  padding: 5rem 10rem;
+}
+.slider-container {
+  width: 5rem;
+  height: 10rem;
+  background-color: #ddd3c5;
+}
