--- a/src/app/home/player/volumne-control/volume-control.html
+++ b/src/app/home/player/volumne-control/volume-control.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="volume-control-wrapper">
+  <ui-slider [progress]="volumeLevel" orientation="vertical" (changes)="volumeChange($event)" (release)="volumeChange($event)"></ui-slider>
+</div>
