--- a/src/app/home/player/player.less
+++ b/src/app/home/player/player.less
@@ -35,5 +35,44 @@
       display: block;
     }
   }
-
+  .pause-overlay {
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    .overlay-button {
+      flex: 0 0 auto;
+      color: #ffffff;
+      font-size: 2.2rem;
+      background: none;
+      border: none;
+      padding: 0.3rem 0.5rem;
+      &:active,
+      &:focus {
+        outline: none;
+      }
+      > span {
+        font-size: 0.8rem;
+        display: block;
+      }
+    }
+    .frame-preview {
+      display: block;
+      width: 128px;
+      height: 72px;
+      > img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 }
