add video frame capture, this feature is buggy on Safari

--- a/src/app/home/player/player-controls/player-controls.html
+++ b/src/app/home/player/player-controls/player-controls.html
@@ -15,6 +15,7 @@
     </div>
     <ng-content select=".volume-button"></ng-content>
     <ng-content select=".fullscreen-button"></ng-content>
+    <ng-content select=".capture-button"></ng-content>
   </div>
   <ng-content select="volume-control"></ng-content>
 </div>
