--- a/src/app/home/player/player.less
+++ b/src/app/home/player/player.less
@@ -35,44 +35,41 @@
       display: block;
     }
   }
-  .pause-overlay {
+
+  .capture-overlay {
+    width: 40%;
+    height: 40%;
+    display: none;
     position: absolute;
-    width: 50%;
-    height: 50%;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin: auto;
-    background-color: rgba(0, 0, 0, 0.3);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    .overlay-button {
-      flex: 0 0 auto;
-      color: #ffffff;
-      font-size: 2.2rem;
-      background: none;
-      border: none;
-      padding: 0.3rem 0.5rem;
-      &:active,
-      &:focus {
-        outline: none;
-      }
-      > span {
-        font-size: 0.8rem;
-        display: block;
-      }
+    right: 1.5rem;
+    bottom: 4rem;
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+
+    > .preview-canvas {
+      width: 100%;
+      height: 100%;
     }
-    .frame-preview {
+
+    &.show {
       display: block;
-      width: 128px;
-      height: 72px;
-      > img {
-        width: 100%;
-        height: 100%;
-      }
+    }
+
+    &:before {
+      content: " ";
+      width: 10px;
+      height: 10px;
+      display: block;
+      position: absolute;
+      right: 10px;
+      bottom: -5px;
+      border: 1px solid #ccc;
+      border-left: 0;
+      border-top: 0;
+      transform: rotate(45deg);
+      background-color: #fff;
     }
   }
 }
