--- a/src/app/home/player/player.html
+++ b/src/app/home/player/player.html
@@ -10,6 +10,7 @@
   <video #video
          preload="auto"
          autoplay
+         crossorigin="anonymous"
          class="ng2-video"
          [poster]="episode.thumbnail"
          [id]="playerId"
