--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -1,49 +1,116 @@
-.theater-backdrop {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: stretch;
-  width: 100%;
-  background-color: #000;
+play-episode {
+  .theater-backdrop {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+    width: 100%;
+    background-color: #000;
 
-  player {
-    display: block;
-    //width: 100%;
-    height: 100%;
-    flex: 0 1 auto;
-  }
-
-  @media (min-width: 1280px) and (min-height: 800px) {
     player {
-      width: 1280px;
-      height: 720px;
-    }
-  }
-}
-
-.episode-info-container {
-  margin-top: 2rem;
-
-  .episode-title {
-    .episode-name-cn {
-      padding-left: 1em;
-      font-size: 0.8em;
-      color: lighten(#000, 50%);
-    }
-  }
-
-  .bangumi-title {
-    .name {
-      padding-left: 1em;
-      font-size: 0.8em;
-      color: #696969;
-    }
-  }
-
-  .episode-list {
-    .episode-link {
       display: block;
-      text-align: center;
+      //width: 100%;
+      height: 100%;
+      flex: 0 1 auto;
+    }
+
+    @media (min-width: 1280px) and (min-height: 800px) {
+      player {
+        width: 1280px;
+        height: 720px;
+      }
+    }
+  }
+  .episode-info-container {
+    margin-top: 2rem;
+
+    .episode-title {
+      .episode-name-cn {
+        padding-left: 1em;
+        font-size: 0.8em;
+        color: lighten(#000, 50%);
+      }
+    }
+
+    .bangumi-info {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: stretch;
+      flex-wrap: wrap;
+      .bangumi-cover {
+        width: 25%;
+        flex: 1 1 auto;
+        display: inline-block;
+      }
+      .bangumi-basic-info {
+        width: 75%;
+        flex: 1 1 auto;
+        display: inline-block;
+        padding: 0 1rem 0 2.5rem;
+
+        .bangumi-title {
+          margin: 0;
+
+          &.name-cn {
+            margin-bottom: 0.8rem;
+          }
+
+          &.name {
+            font-size: 1em;
+            color: #696969;
+          }
+        }
+
+        .summary {
+          margin-top: 2.5rem;
+        }
+
+      }
+    }
+
+    @media(max-width: 767px) {
+
+      .episode-title {
+        .episode-name-cn {
+          display: block;
+          padding-left: 0;
+          font-size: 0.8em;
+          color: lighten(#000, 50%);
+        }
+      }
+
+      .bangumi-info {
+        width: 100%;
+        display: block;
+        .bangumi-cover {
+          display: none;
+        }
+        .bangumi-basic-info {
+          width: 100%;
+          display: block;
+          padding: 1rem;
+          .bangumi-title {
+            &.name-cn {
+              font-size: 1.2rem;
+            }
+            &.name {
+              font-size: 0.8rem;
+            }
+          }
+          .summary {
+            margin-top: 1.5rem;
+          }
+        }
+      }
+    }
+
+    .episode-list {
+      .episode-link {
+        display: block;
+        text-align: center;
+      }
     }
   }
 }
