update router-deprecated to router v3

--- a/src/app/admin/admin.html
+++ b/src/app/admin/admin.html
@@ -1,10 +1,10 @@
 <div class="admin-container">
   <aside class="ui left inverted vertical sidebar fixed menu visible">
-    <a class="item" [routerLink]="['Home', 'Default']">Home</a>
-    <a class="item" [routerLink]="['ListBangumi']">
+    <a class="item" [routerLink]="['/']">Home</a>
+    <a class="item" [routerLink]="['/admin/bangumi']">
       已添加的新番
     </a>
-    <a class="item" [routerLink]="['SearchBangumi']">
+    <a class="item" [routerLink]="['/admin/search']">
       添加新的新番
     </a>
   </aside>
