--- a/src/app/home/default/default.html
+++ b/src/app/home/default/default.html
@@ -22,7 +22,7 @@
   <div class="ui divider"></div>
   <div class="ui five doubling cards">
     <div class="card bangumi-card" *ngFor="let bangumi of onAirBangumi">
-      <a class="image" [routerLink]="['Bangumi', {bangumi_id: bangumi.id}]">
+      <a class="image" [routerLink]="['/bangumi', bangumi.id]">
         <ui-image-placeholder [imageUrl]="bangumi.cover">
           <div class="ui-image-fallback">
             <h4 class="ui icon film icon-holder">
@@ -31,7 +31,7 @@
           </div>
         </ui-image-placeholder>
       </a>
-      <a class="content" [routerLink]="['Bangumi', {bangumi_id: bangumi.id}]">
+      <a class="content" [routerLink]="['/bangumi', bangumi.id]">
         <span>{{bangumi.name_cn}}</span>
       </a>
     </div>
