--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -23,12 +23,12 @@
             <div ui-message="required">邀请码不能为空</div>
           </ui-input>
           <div layout="row" layout-align="center">
-            <button *ngIf="urlPath === 'forget'" class="ui primary button large fluid submit" type="submit" [disabled]="!registerForm.valid">重置密码</button>
-            <button *ngIf="urlPath === 'register'" class="ui primary button large fluid submit" type="submit" [disabled]="!registerForm.valid">注册</button>
+            <button *ngIf="urlPath === '/forget'" class="ui primary button large fluid submit" type="submit" [disabled]="!registerForm.valid">重置密码</button>
+            <button *ngIf="urlPath === '/register'" class="ui primary button large fluid submit" type="submit" [disabled]="!registerForm.valid">注册</button>
           </div>
         </form>
         <div class="login-link">
-          <a [routerLink]="['Login']">已有帐号?登录</a>
+          <a [routerLink]="['/login']">已有帐号?登录</a>
         </div>
         <div class="ui error message" *ngIf="errorMessage">
           <p>{{errorMessage}}</p>
