--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -4,6 +4,12 @@
 @import "./bangumi-detail/bangumi-detail.less";
 @import "./bangumi-list/bangumi-list.less";
 
+home {
+  display: block;
+  height: 100%;
+  padding-top:3.5rem;
+}
+
 .navbar {
   width: 100%;
   height: 3.5rem;
@@ -42,7 +48,8 @@
 }
 
 .home-content {
-  margin-top: 3.5rem;
+  min-height: 100%;
+  padding-bottom: 7em;
 
   &.Default.sidebar-active,
   &.Bangumi.sidebar-active,
@@ -94,5 +101,41 @@
     .icon-holder {
       font-size: 2rem;
     }
+  }
+}
+
+#page-footer {
+  width: 100%;
+  margin-top: -5em;
+  height: 5em;
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  &.Default.sidebar-active,
+  &.Bangumi.sidebar-active,
+  &.BangumiList.sidebar-active {
+    padding-left: 15em;
+  }
+
+  @media (max-width: 1330px) {
+    padding-left: 0;
+    align-items: center;
+    &.Default.sidebar-active,
+    &.Bangumi.sidebar-active,
+    &.BangumiList.sidebar-active {
+      padding-left: 0;
+    }
+
+    .credits, .copyright-content {
+      margin-left: 0;
+    }
+  }
+
+  .credits, .copyright-content {
+    margin-left: 2rem;
   }
 }
