fix the title error in register/forget page

--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -3,7 +3,7 @@
     <div class="center-box">
       <header class="center-box-header">
         <h1>
-          <span>注册{{siteTitle}}</span>
+          <span>{{title}}</span>
         </h1>
       </header>
       <div class="center-box-body">
