add loading in bangumi detail, fix the #23

--- a/src/app/home/bangumi-detail/bangumi-detail.less
+++ b/src/app/home/bangumi-detail/bangumi-detail.less
@@ -1,4 +1,7 @@
 view-bangumi-detail {
+  .loading-wrapper {
+    position: static !important;
+  }
   .bangumi-default-container {
     padding-top: 2rem;
   }
