--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -1,4 +1,7 @@
-<div class="ui container bangumi-default-container">
+<div class="ui active inverted dimmer loading-wrapper" *ngIf="!bangumi">
+  <div class="ui large loader"></div>
+</div>
+<div class="ui container bangumi-default-container" *ngIf="bangumi">
   <div class="bangumi-info">
     <div #bangumiCover class="bangumi-cover" *ngIf="bangumi.cover">
       <ui-image-placeholder [imageUrl]="bangumi.cover">
